force-app/main/default/objects/QuoteLinesForPDF__mdt/QuoteLinesForPDF__mdt.object-meta.xml
<CustomObject>
    <label>QuoteLinesForPDF</label>
    <pluralLabel>QuoteLinesForPDFs</pluralLabel>
</CustomObject>