force-app/main/default/objects/QuoteLinesForPDF__mdt/fields/Quote_LineItem_Description__c.field-meta.xml
<CustomField>
    <fullName>Quote_LineItem_Description__c</fullName>
    <label>Quote LineItem Description</label>
    <type>TextArea</type>
</CustomField>