force-app/main/default/objects/QuoteLinesForPDF__mdt/fields/QuoteLineId__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineId__c</fullName>
    <label>QuoteLineId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>