force-app/main/default/objects/QuoteLinesForPDF__mdt/fields/QuoteLineName__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineName__c</fullName>
    <label>QuoteLineName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>